--- a/Lesson 5/styles/main.css
+++ b/Lesson 5/styles/main.css
@@ -1,15 +1,21 @@
+.page_wrapper{
+    aspect-ratio: 1/2;
+}
+
 .details {
     background-color: darkolivegreen;
     float: left;
     height: 900px;
     width: 400px;
     outline: black thick;
+    margin-left: -9px;
+    margin-top: -15px;
 }
 
 img {
     display: block;
     margin-left: 62.5%;
-    height: 200px;
+    height: 175px;
     width: 150px; 
 }
 
@@ -20,9 +26,31 @@ img {
 }
 
 .contact{
-    margin-top: -170px;
+    margin-top: -130px;
 }
 
 .education{
-    margin-top: 100px
+    margin-top: 40px;
+}
+
+.description,.skills,.intro{
+    font-style: italic;
+}
+
+.list{
+    font-weight: bold;
+}
+
+.name,.intro{
+    background-color: darkolivegreen;
+    margin-left: -15px;
+    margin-right: -70px;
+    text-align: center;
+    text-size-adjust: 40px;
+  
+}
+
+.fa-phone-slash{
+    size: 30px;
+    margin-top: -170px;
 }
