--- a/Lesson 6/styles/style.css
+++ b/Lesson 6/styles/style.css
@@ -158,7 +158,7 @@ a{
     justify-content: space-between;
     margin-left: 10px;
     margin-bottom: 34px;
-
+    
 }
 
 .box_arrow{
@@ -230,4 +230,44 @@ a{
     border-radius: 4px;
     margin-left: 550px;
     text-align: center;
+    margin-bottom: 146px;
+}
+
+.design_description{
+    width: 486px;
+    margin-right: 104px;
+}
+
+.professionals_title{
+    font-weight: 700;
+    font-size: 36px;
+    color: #2F281E;
+}
+
+.design_description h2:not(:first-of-type){
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.design_description p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color:#544837;
+}
+
+.professionals_image{
+    width: 100%;
+    max-width: 486px;
+}
+
+.design_professionals{
+    display: flex;
+    width: 1110px;
+    margin-left: 145px;
+    margin-right: 145px;
+    align-items:center;
+    justify-content: center;  
+    flex-wrap: wrap
 }
