--- a/Lesson 6/styles/style.css
+++ b/Lesson 6/styles/style.css
@@ -2,7 +2,7 @@ html,body{
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family:'Poppins', Helvetica, sans-serif;
+    font-family:'Poppins', Helvetica, sans-serif
     color: #544837;
 }
 
@@ -19,16 +19,15 @@ a{
 }
 
 .container{
-    width: 90%;
+    width: 100%;
     max-width: 1400px;
-    margin: 0 auto;
-    padding: 20px 0px;
+    margin-top: 20px;
     box-sizing: border-box;
+    margin-bottom: 30px;
 }
 
 .header_content{
     display: flex;
-    align-items: right;
     justify-content: space-between;
 }
 
@@ -37,22 +36,33 @@ a{
 }
 
 .logo{
-    width: 186px;
+    max-width: 186px;
+    margin-top: 22px;
+    margin-left: 143px;
+    margin-right: 320px;
 }
 
 .main_nav{
-    width: 350px;
-    align-items: right;
-    padding: 5px 0;
+    max-width: 350px;
+    margin-top: 26px;
+    margin-right: 29px;
+    color: #2F281E;
+    font-size: 14px;
+    line-height: 28px;
 }
 
 .button{
     text-transform: capitalize;
     padding: 11px 25px;
     color: #173A56;
-    border: 1px solid #BCD0E5;
+    border: 1px solid;
     font-weight: 600;
-    border-color: #000000;
+    max-width: 102px;
+    margin-right: 14px;
+    margin-top: 15px;
+    border-radius: 4px;
+    border-color: #BCD0E5;
+    
 }
 
 .button.accent{
@@ -60,10 +70,17 @@ a{
     border-radius: 4px;
     color:white;
     border-color: transparent;
+    max-width: 110px;
+    margin-top: 15px;
+    margin-right: 145px;
 }
 
-.header_actions .button:first-child{
-    margin-right: 14px;
+.hero_container{
+    width: 100%;
+    max-width: 1126px;
+    margin-left: 145px;
+    margin-right: 129px;
+    margin-bottom: 110px;
 }
 
 .site_title{
@@ -78,6 +95,8 @@ a{
     line-height: 28px;
     font-size: 18px;
     margin-bottom: 45px;
+    max-width: 458px;
+    margin-right: 60px;
 }
 
 .hero_button{
@@ -103,7 +122,8 @@ a{
     cursor: pointer;
 }
 
-.box{
+.video_button:before{
+    content: '';
     margin-right: 2px;
     display: inline-block;
     border-bottom: 12px solid transparent;
@@ -123,26 +143,43 @@ a{
 
 .text_col{
     width: 100%;
-    max-width: 500px;
+    max-width: 518px;
 }
 
 .image{
     width: 100%;
-    max-width: 644px;
+    max-width: 605px;
 }
 
-.powers{
+.powers_container{
+    width: 90%;
+    max-width: 1126px;
+    margin: 0 auto;
+    /*align-items: center;*/
+    margin-bottom: 115px;
+}
+
+.super_title{
+    color:#2F281E;
+    font-weight: 700;
+    font-size: 36px;
+    max-width: 539px;
+    margin-bottom: 54px;
+    text-align: center;
+}
+
+/*.powers{
     margin: 0 auto;
     padding: 0 0;
     width: 100px;
     height: 100px;
+}*/
+
+.tests, .surveys, .preference, .sandclock{
+   max-width: 240px;
 }
 
-.tests, .surveys, .preference, .second{
-    width: 240px;
-}
-
-.super_title{
+/*.super_title{
     color:#2F281E;
     font-weight: 700;
     font-size: 36px;
@@ -150,14 +187,18 @@ a{
     width: 539px;
     margin-left: 400px;
     margin-bottom: 54px;
-}
+}*/
 
 .elements{
     display: flex;
-    align-items: right;
+    /*align-items: center;*/
     justify-content: space-between;
-    margin-left: 10px;
+    /*margin-left: 549px;
+    margin-left: 567px;*/
     margin-bottom: 34px;
+    width: 100%;
+    max-width: 1095px;
+    /*text-align: center;*/
     
 }
 
@@ -167,10 +208,14 @@ a{
     background-color: #7752BE ;
     display: inline-block;
     border-radius: 19px;
-    background-image: url(../assets/img/icons/arrow.svg);
+    /*background-image: url(../assets/img/icons/arrow.svg);
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 10px;
+    background-size: 10px;*/
+}
+
+.arrow_image{
+    margin-left: 20px;
+    margin-top: 15px;
 }
 
 .power_title{
@@ -185,10 +230,15 @@ a{
     background-color: #FAB005;
     display: inline-block;
     border-radius: 19px;
-    background-image: url(../assets/img/icons/survey.svg);
+    /*background-image: url(../assets/img/icons/survey.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 10px;
+    background-size: 10px;*/
+}
+
+.surveys_image{
+   margin-left: 17px;
+   margin-top: 17px;
 }
 
 .box_preference{
@@ -197,22 +247,32 @@ a{
     background-color: #F03E3D;
     display: inline-block;
     border-radius: 19px;
-    background-image: url(../assets/img/icons/heart.svg);
+    /*background-image: url(../assets/img/icons/heart.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 10px;
+    background-size: 10px;*/
 }
 
-.box_second{
+.preference_image{
+    margin-top: 17px;
+    margin-left: 17px;
+}
+
+.box_sandclock{
     width: 51px;
     height: 50px;
     background-color: #4DADF7;
     display: inline-block;
     border-radius: 19px;
-    background-image: url(../assets/img/icons/sandclock.svg);
+    /*background-image: url(../assets/img/icons/sandclock.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 10px;
+    background-size: 10px;*/
+}
+
+.sandclock_image{
+    margin-top: 17px;
+    margin-left: 17px;
 }
 
 .elements :not(:last-child){
@@ -228,13 +288,23 @@ a{
     font-size: 16px;
     padding: 15px 32px;
     border-radius: 4px;
-    margin-left: 550px;
+    /*margin-left: 550px;*/
     text-align: center;
-    margin-bottom: 146px;
+   
+}
+
+.professionals_container{
+    width: 100%;
+    max-width: 1110px;
+    margin:0 auto;
+    display: flex;
+    align-items: center;
+    margin-bottom: 101px;
+
 }
 
 .design_description{
-    width: 486px;
+    max-width: 486px;
     margin-right: 104px;
 }
 
@@ -259,7 +329,7 @@ a{
 
 .professionals_image{
     width: 100%;
-    max-width: 486px;
+    max-width: 520px;
 }
 
 .design_professionals{
@@ -270,4 +340,85 @@ a{
     align-items:center;
     justify-content: center;  
     flex-wrap: wrap
+}
+
+.managers_container{
+    width: 100%;
+    max-width: 1121px;
+    margin: 0 auto;
+    display:flex;
+    align-items: center;
+    margin-bottom: 104px;
+}
+
+.managers_image{
+    width: 100%;
+    max-width: 535px;
+    margin-right: 100px;
+}
+
+.managers_description{
+    width: 90%;
+    max-width: 486px;
+}
+
+.managers_title{
+    font-size: 36px;
+    max-width: 342px;
+}
+
+.list li:before{
+    content:'';
+    background-color: #FF9900;
+    background-image: url(../assets/img/icons/tick.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 35px;
+    height: 35px;
+    display: inline-block;
+    border-radius: 12px;
+    margin-right: 30px;
+    background-size: 15px;
+}
+
+.managers_details{
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.list li:not(:last-child){
+    margin-bottom: 30px;
+}
+
+.marketers_container{
+    width:100%;
+    max-width: 1110px;
+    display: flex;
+    align-items: center;
+    /*margin-left: 147px;
+    margin-right: 143px;*/
+    margin:0 auto;
+}
+
+.marketers_optimisation{
+    max-width: 486px;
+    margin-right: 82px;
+}
+
+.marketers_optimisation h2:not(:first-of-type){
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.marketers_optimisation p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color:#544837;
+}
+
+.marketers_image{
+    width: 100%;
+    max-width: 542px;
 }
