--- a/Lesson 6/styles/style.css
+++ b/Lesson 6/styles/style.css
@@ -1,38 +1,22 @@
-html,body{
+.page_wrapper{
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family:'Poppins', Helvetica, sans-serif
-    color: #544837;
-}
-
-ul,ol{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-a{
-    color: inherit;
-    text-decoration: none;
-    display: inline-block;
+    font-family: 'Poppins';
+    color: #544837
 }
 
 .container{
     width: 100%;
     max-width: 1400px;
+    margin: 0 auto;
     margin-top: 20px;
-    box-sizing: border-box;
     margin-bottom: 30px;
 }
 
 .header_content{
     display: flex;
     justify-content: space-between;
-}
-
-.main_nav a:not(:last-child) {
-    margin-right: 15px;
 }
 
 .logo{
@@ -42,6 +26,12 @@ a{
     margin-right: 320px;
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+    display: inline-block;
+}
+
 .main_nav{
     max-width: 350px;
     margin-top: 26px;
@@ -49,6 +39,10 @@ a{
     color: #2F281E;
     font-size: 14px;
     line-height: 28px;
+}
+
+.main_nav a:not(:last-child) {
+    margin-right: 15px;
 }
 
 .button{
@@ -78,9 +72,20 @@ a{
 .hero_container{
     width: 100%;
     max-width: 1126px;
-    margin-left: 145px;
-    margin-right: 129px;
+    margin: 0 auto;
     margin-bottom: 110px;
+}
+
+.hero_content{
+    display:flex;
+    align-items:center;
+    justify-content: center;  
+    flex-wrap: wrap;
+}
+
+.text_col{
+    width: 100%;
+    max-width: 518px;
 }
 
 .site_title{
@@ -122,7 +127,7 @@ a{
     cursor: pointer;
 }
 
-.video_button:before{
+/*.video_button:before{
     content: '';
     margin-right: 2px;
     display: inline-block;
@@ -132,18 +137,18 @@ a{
     border-top: 12px solid transparent;
     margin-bottom: -5px;
     border-radius: 2px;
-}
+}*/
 
-.hero_content{
-    display:flex;
-    align-items:center;
-    justify-content: center;  
-    flex-wrap: wrap;
-}
-
-.text_col{
-    width: 100%;
-    max-width: 518px;
+.video_button:before{
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 17px;
+    background-image: url(../assets/img/icons/triangle.svg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin-bottom: -3px;
+    margin-right: 9px;
 }
 
 .image{
@@ -152,10 +157,9 @@ a{
 }
 
 .powers_container{
-    width: 90%;
-    max-width: 1126px;
+    width: 100%;
+    max-width: 1400px;
     margin: 0 auto;
-    /*align-items: center;*/
     margin-bottom: 115px;
 }
 
@@ -164,42 +168,20 @@ a{
     font-weight: 700;
     font-size: 36px;
     max-width: 539px;
-    margin-bottom: 54px;
     text-align: center;
-}
-
-/*.powers{
+    display: block;
+    align-items: center;
     margin: 0 auto;
-    padding: 0 0;
-    width: 100px;
-    height: 100px;
-}*/
-
-.tests, .surveys, .preference, .sandclock{
-   max-width: 240px;
-}
-
-/*.super_title{
-    color:#2F281E;
-    font-weight: 700;
-    font-size: 36px;
-    text-align: center;
-    width: 539px;
-    margin-left: 400px;
     margin-bottom: 54px;
-}*/
+}
 
 .elements{
     display: flex;
-    /*align-items: center;*/
     justify-content: space-between;
-    /*margin-left: 549px;
-    margin-left: 567px;*/
     margin-bottom: 34px;
     width: 100%;
     max-width: 1095px;
-    /*text-align: center;*/
-    
+    margin: 0 auto;    
 }
 
 .box_arrow{
@@ -208,20 +190,11 @@ a{
     background-color: #7752BE ;
     display: inline-block;
     border-radius: 19px;
-    /*background-image: url(../assets/img/icons/arrow.svg);
-    background-repeat: no-repeat;
-    background-size: 10px;*/
 }
 
 .arrow_image{
     margin-left: 20px;
     margin-top: 15px;
-}
-
-.power_title{
-    font-weight: 600;
-    font-size: 22px;
-    color: #2F281E;
 }
 
 .box_surveys{
@@ -230,10 +203,6 @@ a{
     background-color: #FAB005;
     display: inline-block;
     border-radius: 19px;
-    /*background-image: url(../assets/img/icons/survey.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 10px;*/
 }
 
 .surveys_image{
@@ -247,10 +216,6 @@ a{
     background-color: #F03E3D;
     display: inline-block;
     border-radius: 19px;
-    /*background-image: url(../assets/img/icons/heart.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 10px;*/
 }
 
 .preference_image{
@@ -264,10 +229,6 @@ a{
     background-color: #4DADF7;
     display: inline-block;
     border-radius: 19px;
-    /*background-image: url(../assets/img/icons/sandclock.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 10px;*/
 }
 
 .sandclock_image{
@@ -279,7 +240,17 @@ a{
     margin-right: 45px
 }
 
-.bottom_button{
+.tests, .surveys, .preference, .sandclock{
+    max-width: 240px;
+ }
+
+.power_title{
+    font-weight: 600;
+    font-size: 22px;
+    color: #2F281E;
+}
+
+.elements_button{
     width: 175px;
     background-color: #FF9900;
     color: white;
@@ -288,9 +259,9 @@ a{
     font-size: 16px;
     padding: 15px 32px;
     border-radius: 4px;
-    /*margin-left: 550px;*/
     text-align: center;
-   
+    display: block;
+    margin:0 auto;
 }
 
 .professionals_container{
@@ -300,7 +271,6 @@ a{
     display: flex;
     align-items: center;
     margin-bottom: 101px;
-
 }
 
 .design_description{
@@ -335,11 +305,10 @@ a{
 .design_professionals{
     display: flex;
     width: 1110px;
-    margin-left: 145px;
-    margin-right: 145px;
     align-items:center;
     justify-content: center;  
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    margin: 0 auto; 
 }
 
 .managers_container{
@@ -367,7 +336,20 @@ a{
     max-width: 342px;
 }
 
-.list li:before{
+.list{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    list-style: none;
+    max-width: 486px;
+}
+
+.list_item{
+    font-size: 0;
+    margin-bottom: 30px
+}
+
+.list_item::before{
     content:'';
     background-color: #FF9900;
     background-image: url(../assets/img/icons/tick.svg);
@@ -375,11 +357,57 @@ a{
     background-position: center;
     width: 35px;
     height: 35px;
-    display: inline-block;
     border-radius: 12px;
     margin-right: 30px;
     background-size: 15px;
+    display:inline-block;
+    vertical-align: middle;
+    margin-top: -10px;
 }
+
+.list_copy{
+    font-family: 'Poppins', Arial, sans-serif;
+    font-size: 16px;
+    line-height: 26px;
+    color: #544837;
+    display: inline-block ;
+    vertical-align: middle;
+    width: 100%;
+    max-width: 86%;
+}
+
+/*ul,ol{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}*/
+
+/*.list li:before{
+    content:'';
+    background-color: #FF9900;
+    background-image: url(../assets/img/icons/tick.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 35px;
+    height: 35px;
+    border-radius: 12px;
+    margin-right: 30px;
+    background-size: 15px;
+    display: inline-block;
+    margin-bottom: -12px;
+}*/
+
+/*.list_container{
+    max-width: 430px;
+    text-wrap: wrap;
+}
+
+.items_container{
+    width: 100%;
+    max-width: 365px;
+    text-wrap: wrap;
+    line-height: 26px;
+}*/
 
 .managers_details{
     font-size: 16px;
@@ -395,9 +423,8 @@ a{
     max-width: 1110px;
     display: flex;
     align-items: center;
-    /*margin-left: 147px;
-    margin-right: 143px;*/
     margin:0 auto;
+    margin-bottom: 146px;
 }
 
 .marketers_optimisation{
@@ -421,4 +448,74 @@ a{
 .marketers_image{
     width: 100%;
     max-width: 542px;
+}
+
+.footer_container{
+    width: 100%;
+    max-width: 1109px;
+    margin: 0 auto;
+}
+
+.footer_image{
+    width: 100%;
+    max-width: 185px;
+    margin-top: 102px;
+    margin-bottom: 161px;
+    margin-right: 126px;
+}
+
+.info_list{
+    width: 100%;
+    max-width: 118px;
+    display: inline-block;
+    /*margin-left: 324px;*/
+    margin-right: 129px;
+}
+
+.info, .info_services{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.services_list{
+    width: 100%;
+    max-width: 132px;
+    display: inline-block;
+    margin-right: 82px;
+}
+
+.info_list li, .services_list li:not(:last-child){
+    margin-bottom: 10px;
+}
+
+.form_input{
+    width: 100%;
+    max-width: 300px;
+    margin-top: 102px;
+    display: inline-block;
+}
+
+.input{
+    margin: 0;
+    padding: 0;
+    width: 300px;
+    height: 48px;
+    border-radius: 4px;
+    border: 1px solid;
+    border-color: #BCD0E5;
+    margin-bottom: 21px;
+    text-align: center;
+}
+
+.footer_button{
+    max-width: 131px;
+    background-color: #FF9900;
+    border-radius: 4px;
+    color:white;
+    border-color: transparent;
+    font-weight: 700;
+    font-size: 16px;
+    padding: 8px 15px;
+    border: 1px transparent;
 }
