--- a/Lesson 6/styles/styleredo.css
+++ b/Lesson 6/styles/styleredo.css
@@ -1,21 +1,38 @@
-.page_wrapper{
+html,body{
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family: 'Poppins';
-    color: #544837
+    font-family:'Poppins', Helvetica, sans-serif
+    color: #544837;
+}
+
+ul,ol{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .container{
     width: 100%;
     max-width: 1400px;
     margin-top: 20px;
+    box-sizing: border-box;
     margin-bottom: 30px;
 }
 
 .header_content{
     display: flex;
     justify-content: space-between;
+}
+
+.main_nav a:not(:last-child) {
+    margin-right: 15px;
 }
 
 .logo{
@@ -25,12 +42,6 @@
     margin-right: 320px;
 }
 
-a{
-    color: inherit;
-    text-decoration: none;
-    display: inline-block;
-}
-
 .main_nav{
     max-width: 350px;
     margin-top: 26px;
@@ -38,10 +49,6 @@ a{
     color: #2F281E;
     font-size: 14px;
     line-height: 28px;
-}
-
-.main_nav a:not(:last-child) {
-    margin-right: 15px;
 }
 
 .button{
@@ -74,18 +81,6 @@ a{
     margin-left: 145px;
     margin-right: 129px;
     margin-bottom: 110px;
-}
-
-.hero_content{
-    display:flex;
-    align-items:center;
-    justify-content: center;  
-    flex-wrap: wrap;
-}
-
-.text_col{
-    width: 100%;
-    max-width: 518px;
 }
 
 .site_title{
@@ -139,15 +134,28 @@ a{
     border-radius: 2px;
 }
 
+.hero_content{
+    display:flex;
+    align-items:center;
+    justify-content: center;  
+    flex-wrap: wrap;
+}
+
+.text_col{
+    width: 100%;
+    max-width: 518px;
+}
+
 .image{
     width: 100%;
     max-width: 605px;
 }
 
 .powers_container{
-    width: 100%;
-    max-width: 1400px;
+    width: 90%;
+    max-width: 1126px;
     margin: 0 auto;
+    /*align-items: center;*/
     margin-bottom: 115px;
 }
 
@@ -156,20 +164,42 @@ a{
     font-weight: 700;
     font-size: 36px;
     max-width: 539px;
-    text-align: center;
-    display: block;
-    align-items: center;
-    margin: 0 auto;
     margin-bottom: 54px;
+    text-align: center;
 }
+
+/*.powers{
+    margin: 0 auto;
+    padding: 0 0;
+    width: 100px;
+    height: 100px;
+}*/
+
+.tests, .surveys, .preference, .sandclock{
+   max-width: 240px;
+}
+
+/*.super_title{
+    color:#2F281E;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    width: 539px;
+    margin-left: 400px;
+    margin-bottom: 54px;
+}*/
 
 .elements{
     display: flex;
+    /*align-items: center;*/
     justify-content: space-between;
+    /*margin-left: 549px;
+    margin-left: 567px;*/
     margin-bottom: 34px;
     width: 100%;
     max-width: 1095px;
-    margin: 0 auto;    
+    /*text-align: center;*/
+    
 }
 
 .box_arrow{
@@ -178,11 +208,20 @@ a{
     background-color: #7752BE ;
     display: inline-block;
     border-radius: 19px;
+    /*background-image: url(../assets/img/icons/arrow.svg);
+    background-repeat: no-repeat;
+    background-size: 10px;*/
 }
 
 .arrow_image{
     margin-left: 20px;
     margin-top: 15px;
+}
+
+.power_title{
+    font-weight: 600;
+    font-size: 22px;
+    color: #2F281E;
 }
 
 .box_surveys{
@@ -191,6 +230,10 @@ a{
     background-color: #FAB005;
     display: inline-block;
     border-radius: 19px;
+    /*background-image: url(../assets/img/icons/survey.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 10px;*/
 }
 
 .surveys_image{
@@ -204,6 +247,10 @@ a{
     background-color: #F03E3D;
     display: inline-block;
     border-radius: 19px;
+    /*background-image: url(../assets/img/icons/heart.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 10px;*/
 }
 
 .preference_image{
@@ -217,6 +264,10 @@ a{
     background-color: #4DADF7;
     display: inline-block;
     border-radius: 19px;
+    /*background-image: url(../assets/img/icons/sandclock.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 10px;*/
 }
 
 .sandclock_image{
@@ -228,17 +279,7 @@ a{
     margin-right: 45px
 }
 
-.tests, .surveys, .preference, .sandclock{
-    max-width: 240px;
- }
-
-.power_title{
-    font-weight: 600;
-    font-size: 22px;
-    color: #2F281E;
-}
-
-.elements_button{
+.bottom_button{
     width: 175px;
     background-color: #FF9900;
     color: white;
@@ -247,9 +288,9 @@ a{
     font-size: 16px;
     padding: 15px 32px;
     border-radius: 4px;
+    /*margin-left: 550px;*/
     text-align: center;
-    display: block;
-    margin:0 auto;
+   
 }
 
 .professionals_container{
@@ -259,6 +300,7 @@ a{
     display: flex;
     align-items: center;
     margin-bottom: 101px;
+
 }
 
 .design_description{
@@ -325,12 +367,6 @@ a{
     max-width: 342px;
 }
 
-ul,ol{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
 .list li:before{
     content:'';
     background-color: #FF9900;
@@ -339,10 +375,10 @@ ul,ol{
     background-position: center;
     width: 35px;
     height: 35px;
+    display: inline-block;
     border-radius: 12px;
     margin-right: 30px;
     background-size: 15px;
-    display: inline-block;
 }
 
 .managers_details{
@@ -359,6 +395,8 @@ ul,ol{
     max-width: 1110px;
     display: flex;
     align-items: center;
+    /*margin-left: 147px;
+    margin-right: 143px;*/
     margin:0 auto;
 }
 
