--- a/Lesson 7/styles/style.scss
+++ b/Lesson 7/styles/style.scss
@@ -141,7 +141,7 @@ a{
     border-radius: 2px;
 }*/
 
-.video_button:before{
+/*.video_button:before{
     content: '';
     display: inline-block;
     width: 20px;
@@ -151,6 +151,20 @@ a{
     background-size: 100% 100%;
     margin-bottom: -3px;
     margin-right: 9px;
+}*/
+
+/*.video_button:before{
+    content: '<i class="fa-solid fa-play"></i>';
+    display: inline-block;
+    width: 20px;
+    height: 17px;
+    margin-bottom: -3px;
+    margin-right: 9px;
+}*/
+
+.play_icon{
+    display: inline-block;
+    background-color: #FF9900;
 }
 
 .image{
