--- a/Lesson 7/styles/style.scss
+++ b/Lesson 7/styles/style.scss
@@ -119,6 +119,12 @@ a{
     cursor: pointer;
 }
 
+.hero_button_actions{
+    width: 100%;
+    max-width: 161px;
+    display: inline-block;
+}
+
 .video_button{
     border:none;
     background-color: white;
@@ -127,6 +133,10 @@ a{
     font-size: 16px;
     text-decoration: underline;
     cursor: pointer;
+    width: 100%;
+    max-width: 135px;
+    margin: 0;
+    padding: 0;
 }
 
 /*.video_button:before{
@@ -162,9 +172,30 @@ a{
     margin-right: 9px;
 }*/
 
-.play_icon{
+/*.fa-play{
     display: inline-block;
-    background-color: #FF9900;
+    color: #FF9900;
+    width: 20px;
+    height: 17px;
+    margin-right: 8.5px;
+}
+
+.fa-play::before{
+    display: inline-block;
+    color: #FF9900;
+    width: 20px;
+    height: 17px;
+    margin-right: 8.5px;
+    margin-bottom: -100px;
+}*/
+
+.play_button{
+    display: inline;
+    color: #FF9900;
+    width: 20px;
+    height: 17px;
+    margin-right: 9px;
+    margin-bottom: -15px;   
 }
 
 .image{
