--- a/Lesson 7/styles/style.css
+++ b/Lesson 7/styles/style.css
@@ -226,56 +226,118 @@ a {
   margin: 0 auto;
 }
 
-.box_arrow {
+/*.box_arrow{
+    width: 51px;
+    height: 50px;
+    background-color: #7752BE ;
+    display: inline-block;
+    border-radius: 19px;
+}*/
+.arrow_pointer {
   width: 51px;
   height: 50px;
   background-color: #7752BE;
   display: inline-block;
   border-radius: 19px;
+  color: white;
+  text-align: center;
 }
 
-.arrow_image {
-  margin-left: 20px;
+.fa-arrow-pointer::before {
+  display: inline-block;
   margin-top: 15px;
+  height: 12px;
+  width: 18px;
 }
 
-.box_surveys {
+/*.arrow_image{
+    margin-left: 20px;
+    margin-top: 15px;
+}*/
+/*.box_surveys{
+    width: 51px;
+    height: 50px;
+    background-color: #FAB005;
+    display: inline-block;
+    border-radius: 19px;
+}*/
+.stumble {
   width: 51px;
   height: 50px;
   background-color: #FAB005;
   display: inline-block;
   border-radius: 19px;
+  color: white;
+  text-align: center;
 }
 
-.surveys_image {
-  margin-left: 17px;
-  margin-top: 17px;
+.fa-stumbleupon::before {
+  display: inline-block;
+  margin-top: 15px;
+  height: 18px;
+  width: 18px;
 }
 
-.box_preference {
+/*.surveys_image{
+   margin-left: 17px;
+   margin-top: 17px;
+}
+
+.box_preference{
+    width: 51px;
+    height: 50px;
+    background-color: #F03E3D;
+    display: inline-block;
+    border-radius: 19px;
+}
+
+.preference_image{
+    margin-top: 17px;
+    margin-left: 17px;
+}*/
+.heart {
   width: 51px;
   height: 50px;
   background-color: #F03E3D;
   display: inline-block;
   border-radius: 19px;
+  text-align: center;
+  color: white;
 }
 
-.preference_image {
-  margin-top: 17px;
-  margin-left: 17px;
+.fa-heart::before {
+  display: inline-block;
+  margin-top: 15px;
+  height: 16px;
+  width: 18px;
 }
 
-.box_sandclock {
+/*.box_sandclock{
+    width: 51px;
+    height: 50px;
+    background-color: #4DADF7;
+    display: inline-block;
+    border-radius: 19px;
+}
+
+.sandclock_image{
+    margin-top: 17px;
+    margin-left: 17px;
+}*/
+.hourglass {
   width: 51px;
   height: 50px;
   background-color: #4DADF7;
   display: inline-block;
   border-radius: 19px;
+  text-align: center;
+  color: white;
 }
 
-.sandclock_image {
-  margin-top: 17px;
-  margin-left: 17px;
+.fa-hourglass-half {
+  margin-top: 15px;
+  width: 14px;
+  height: 18px;
 }
 
 .elements :not(:last-child) {
@@ -390,20 +452,38 @@ a {
   margin-bottom: 30px;
 }
 
-.list_item::before {
-  content: "";
+/*.list_item::before{
+    content:'';
+    background-color: #FF9900;
+    background-image: url(../assets/img/icons/tick.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 35px;
+    height: 35px;
+    border-radius: 12px;
+    margin-right: 30px;
+    background-size: 15px;
+    display:inline-block;
+    vertical-align: middle;
+    margin-top: -10px;
+}*/
+.check {
   background-color: #FF9900;
-  background-image: url(../assets/img/icons/tick.svg);
-  background-repeat: no-repeat;
-  background-position: center;
   width: 35px;
   height: 35px;
   border-radius: 12px;
   margin-right: 30px;
-  background-size: 15px;
   display: inline-block;
-  vertical-align: middle;
   margin-top: -10px;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.fa-check::before {
+  display: inline-block;
+  margin-top: 10px;
+  vertical-align: middle;
 }
 
 .list_copy {
@@ -412,9 +492,9 @@ a {
   line-height: 26px;
   color: #544837;
   display: inline-block;
-  vertical-align: middle;
   width: 100%;
   max-width: 86%;
+  vertical-align: middle;
 }
 
 /*ul,ol{
