--- a/Lesson 7/styles/style.css
+++ b/Lesson 7/styles/style.css
@@ -444,14 +444,13 @@ a {
   margin: 0;
   width: 100%;
   list-style: none;
-  max-width: 486px;
+  /*max-width: 486px;*/
 }
 
-.list_item {
-  font-size: 0;
-  margin-bottom: 30px;
-}
-
+/*.list_item{
+    font-size: 0;
+    margin-bottom: 30px;
+}*/
 /*.list_item::before{
     content:'';
     background-color: #FF9900;
@@ -474,7 +473,7 @@ a {
   border-radius: 12px;
   margin-right: 30px;
   display: inline-block;
-  margin-top: -10px;
+  margin-top: -30px;
   color: white;
   text-align: center;
   vertical-align: middle;
@@ -483,7 +482,7 @@ a {
 .fa-check::before {
   display: inline-block;
   margin-top: 10px;
-  vertical-align: middle;
+  /*vertical-align: middle;*/
 }
 
 .list_copy {
@@ -493,8 +492,10 @@ a {
   color: #544837;
   display: inline-block;
   width: 100%;
-  max-width: 86%;
+  /*max-width: 86%;*/
+  max-width: 365px;
   vertical-align: middle;
+  margin-bottom: 30px;
 }
 
 /*ul,ol{
