--- a/Lesson 7/styles/style.scss
+++ b/Lesson 7/styles/style.scss
@@ -457,13 +457,13 @@ a{
     margin: 0;
     width: 100%;
     list-style: none;
-    max-width: 486px;
+    /*max-width: 486px;*/
 }
 
-.list_item{
+/*.list_item{
     font-size: 0;
     margin-bottom: 30px;
-}
+}*/
 
 /*.list_item::before{
     content:'';
@@ -488,7 +488,7 @@ a{
     border-radius: 12px;
     margin-right: 30px;
     display:inline-block;
-    margin-top: -10px;
+    margin-top: -30px;
     color: white;
     text-align: center;
     vertical-align: middle;
@@ -497,7 +497,7 @@ a{
 .fa-check::before{
     display: inline-block;
     margin-top: 10px;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
 
 }
 
@@ -508,8 +508,10 @@ a{
     color: #544837;
     display: inline-block ;
     width: 100%;
-    max-width: 86%;
+    /*max-width: 86%;*/
+    max-width: 365px;
     vertical-align: middle;
+    margin-bottom: 30px;
 }
 
 /*ul,ol{
