--- a/Lection15_Forms_updated/styles/main.scss
+++ b/Lection15_Forms_updated/styles/main.scss
@@ -16,8 +16,8 @@
     max-width: 1440px;
     margin: 0 auto;
     margin-bottom: 120px;
-    padding-right: 135px;
-    padding-left: 135px;
+    //padding-right: 135px;
+    //padding-left: 135px;
 }
 
 .header_bar{
