--- a/Lection15_Forms_updated/styles/main.scss
+++ b/Lection15_Forms_updated/styles/main.scss
@@ -389,15 +389,32 @@
     list-style: none;
     width: 100%;
     max-width: 470px;
-    text-align: left; //HOW DO I ALIGN THE LIST OT BE AT THE SAME LEVEL AS THE PARAGRAPH FROM ABOVE?
+    text-align: justify; //HOW DO I ALIGN THE LIST OT BE AT THE SAME LEVEL AS THE PARAGRAPH FROM ABOVE?
+    vertical-align: middle;
+    margin: 0;
+    padding: 0;
 }
+
+.relax_items li{
+    margin-bottom: 12px;
+}
+
+//.check{
+    //color: #FF7F57;
+    //width: 16px;
+    //height: 16px ;
+    //display: inline-block;
+    //text-align: center;
+    //vertical-align: middle;
+//}
 
 .fa-check::before{
     color: #FF7F57;
     width: 16px;
     height: 16px ;
-    margin-right: 15px;
+    //margin-right: 15px;
     display: inline-block;
+    padding-right: 15px;
 }
 
 .relax_image{
@@ -409,7 +426,7 @@
 .rectangle_image{
     float: right;
     clear: both;
-    margin-top: -5px;
+    margin-top: -40px; //HOW SHOUL I SOLE THIS?
     width: 100%;
     max-width: 600px;
 }
@@ -418,7 +435,7 @@
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
-    margin-top:167px //DID THIS BECAUSE OF THE FLOATING IMAGE FROM ABOVE(COULDNT DOWLOAD IT AS AN ENTIRE IMAGE)
+    margin-top:130px //DID THIS BECAUSE OF THE FLOATING IMAGE FROM ABOVE(COULDNT DOWLOAD IT AS AN ENTIRE IMAGE)
 }
 
 .website{
