--- a/Project_2/styles/main.css
+++ b/Project_2/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body, .page_wrapper {
   margin: 0;
   padding: 0;
@@ -325,15 +326,11 @@ body, .page_wrapper {
   margin-bottom: 89px;
 }
 
-.news_card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  column-gap: 30px;
-}
-
 .unmatched, .advertising, .hypnotize {
   background-color: white;
+  margin-right: 30px;
+  width: 100%;
+  max-width: 370px;
 }
 
 .card_info {
@@ -383,4 +380,25 @@ body, .page_wrapper {
   margin-left: 20px;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.slick-prev::before, .slick-next::before {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  font-size: 40px;
+  font-family: "Font Awesome 5 Free";
+  content: "";
+  border-radius: 50%;
+  border: 1 px solid;
+}
+
+.slick-prev {
+  width: 40px;
+  height: 40px;
+  left: -80px;
+}
+
+.slick-next {
+  right: -60px;
 }
