--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -537,7 +537,7 @@ body, .page_wrapper{
 .form_content{
     padding: 60px 60px;
     margin: 0 auto;
-    background-image: url(/Project_2/assets/formbck.jpg);
+    background-image: url(../assets/formbck.jpg);
     //margin-top: -250px;
     // z-index: 99999;
     // position: relative;
