--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -538,6 +538,8 @@ body, .page_wrapper{
     padding: 60px 60px;
     margin: 0 auto;
     background-image: url(../assets/formbck.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     //margin-top: -250px;
     // z-index: 99999;
     // position: relative;
