--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -1,69 +1,75 @@
-body, .page_wrapper{
+body,
+.page_wrapper {
     margin: 0;
     padding: 0;
 }
 
-.page_wrapper{
+.page_wrapper {
     font-family: 'Montserrat, Arial, Helvetica';
     font-weight: 300;
     color: #2C4058;
 }
 
-.header_section{
+.header_section {
     margin: 0;
     padding: 0;
     width: 100%;
-    background-image: url(../assets/Background.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    background: rgb(126, 90, 255);
+    background: linear-gradient(90deg, rgba(126, 90, 255, 1) 0%, rgba(85, 183, 255, 1) 100%);
+    // background-image: url(../assets/Background.png);
+    // background-repeat: no-repeat;
+    // background-position: center;
+    // background-size: cover;
+    // position: relative;
     color: white;
     font-family: 'Source Sans 3';
 }
 
-.header_container{
+.header_container {
     width: 100%;
 }
 
-.header_content{
+.header_content {
     width: 100%;
     max-width: 1170px;
     padding: 53px 0;
     margin: 0 auto;
 }
 
-.header_nav{
+.header_nav {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.logo{
+.logo {
     margin-right: 144px;
     width: 100%;
     max-width: 241px;
 }
 
-.main_nav{
+.main_nav {
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 70px;
     font-weight: 300;
     font-size: 12px;
-    text-transform: uppercase; 
+    text-transform: uppercase;
     width: 100%;
     max-width: 515px;
 }
 
-.about, .projects, .news, .contact{
+.about,
+.projects,
+.news,
+.contact {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.bullet{
+.bullet {
     width: 9px;
     height: 9px;
     background-color: white;
@@ -71,7 +77,7 @@ body, .page_wrapper{
     margin-right: 14px;
 }
 
-.social_nav{
+.social_nav {
     margin-left: 110px;
     display: flex;
     align-items: center;
@@ -83,7 +89,7 @@ body, .page_wrapper{
     color: white;
 }
 
-.social_nav i{
+.social_nav i {
     border: 1px solid white;
     border-radius: 50%;
     width: 40px;
@@ -93,7 +99,7 @@ body, .page_wrapper{
     justify-content: center;
 }
 
-.header_title{
+.header_title {
     margin: 0 auto;
     width: 100%;
     max-width: 917px;
@@ -103,7 +109,7 @@ body, .page_wrapper{
     font-family: 'Montserrat';
 }
 
-.main_title{
+.main_title {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 80px;
@@ -111,27 +117,27 @@ body, .page_wrapper{
     margin: 0;
 }
 
-.header_title p{
+.header_title p {
     font-size: 18px;
     letter-spacing: 5px;
     margin-top: 20px;
     margin-bottom: 0;
 }
 
-.go_down{
+.go_down {
     border: 1px solid white;
     border-radius: 50%;
     width: 40px;
-    height: 40px;  
+    height: 40px;
     cursor: pointer;
     background-color: transparent;
-//     display: block;
-//     margin: 0 auto;
-//     margin-top: 240px;
+    //     display: block;
+    //     margin: 0 auto;
+    //     margin-top: 240px;
 
 }
 
-.arrow{
+.arrow {
     height: 17px;
     width: 10px;
     display: block;
@@ -139,7 +145,7 @@ body, .page_wrapper{
     padding-top: 12px;
 }
 
-.down_arrow{
+.down_arrow {
     // border: 1px solid black;
     // border-radius: 50%;
     width: 40px;
@@ -149,20 +155,23 @@ body, .page_wrapper{
     margin-top: 240px;
 }
 
-.heading_bck, .news_bck{
+.heading_bck,
+.news_bck {
     position: absolute;
-    opacity: 0.7;
+    //opacity: 0.7;
     width: 100%;
     height: 100%;
 }
 
-.center_section, .commerce_section, .news_section{
+.center_section,
+.commerce_section,
+.news_section {
     margin: 0;
     padding: 0;
     width: 100%;
 }
 
-.center_content{
+.center_content {
     padding-top: 100px;
     padding-bottom: 140px;
     width: 100%;
@@ -171,7 +180,7 @@ body, .page_wrapper{
     position: relative;
 }
 
-.upper_line{
+.upper_line {
     width: 100%;
     max-width: 100px;
     border: 1px solid black;
@@ -180,7 +189,7 @@ body, .page_wrapper{
     margin-bottom: 30px;
 }
 
-.center_title{
+.center_title {
     font-family: "Montserrat";
     font-weight: 700;
     font-size: 44px;
@@ -189,7 +198,7 @@ body, .page_wrapper{
     margin-bottom: 89px;
 }
 
-.trade_bck{
+.trade_bck {
     display: block;
     width: 100%;
     max-width: 585px;
@@ -201,7 +210,7 @@ body, .page_wrapper{
     // transform: translate(-65%);
 }
 
-.trade_center{
+.trade_center {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -209,7 +218,7 @@ body, .page_wrapper{
     column-gap: 70px;
 }
 
-.trade_image{
+.trade_image {
     // position: absolute;
     // margin-left: -215px;
     margin-top: 57px;
@@ -218,7 +227,8 @@ body, .page_wrapper{
     height: 470px;
 }
 
-.informations_title, .commerce_title{
+.informations_title,
+.commerce_title {
     font-size: 22px;
     font-family: 'Montserrat';
     text-transform: uppercase;
@@ -228,16 +238,18 @@ body, .page_wrapper{
     margin-bottom: 0;
 }
 
-.center_heading, .commerce_heading{
+.center_heading,
+.commerce_heading {
     margin: 0;
     text-transform: uppercase;
-    font-family:'Montserrat';
+    font-family: 'Montserrat';
     font-size: 44px;
     font-weight: 700;
     margin-bottom: 19px;
 }
 
-.informations_details, .commerce_description{
+.informations_details,
+.commerce_description {
     font-family: 'Open Sans';
     font-weight: 300;
     font-size: 18px;
@@ -247,7 +259,7 @@ body, .page_wrapper{
     margin-bottom: 41px;
 }
 
-.center_button{
+.center_button {
     border: 1px solid #2C4058;
     color: black;
     text-transform: uppercase;
@@ -257,14 +269,14 @@ body, .page_wrapper{
     margin-bottom: 60px;
 }
 
-.fa-location-dot::before{
+.fa-location-dot::before {
     display: block;
     width: 9px;
     height: 17px;
     margin-right: 10px;
 }
 
-.center_location{
+.center_location {
     font-family: 'Open Sans';
     font-style: italic;
     font-size: 15px;
@@ -272,7 +284,7 @@ body, .page_wrapper{
     font-weight: 400;
 }
 
-.commerce_content{
+.commerce_content {
     padding-bottom: 140px;
     width: 100%;
     max-width: 1170px;
@@ -280,7 +292,7 @@ body, .page_wrapper{
     position: relative;
 }
 
-.commerce_center{
+.commerce_center {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -288,7 +300,7 @@ body, .page_wrapper{
     column-gap: 64px;
 }
 
-.commerce_bck{
+.commerce_bck {
     display: block;
     width: 100%;
     max-width: 585px;
@@ -301,7 +313,7 @@ body, .page_wrapper{
     // margin-right: 0;
 }
 
-.news_section{
+.news_section {
     background-image: url(../assets/news_linear.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -309,13 +321,13 @@ body, .page_wrapper{
     position: relative;
 }
 
-.news_bck{
+.news_bck {
     height: 50%;
     // margin-top: 445px;
     transform: translate(0, 101%);
 }
 
-.news_content{
+.news_content {
     padding-top: 135px;
     padding-bottom: 143px;
     margin: 0 auto;
@@ -323,7 +335,7 @@ body, .page_wrapper{
     max-width: 1170px;
 }
 
-.news_line{
+.news_line {
     display: block;
     border: 1px solid white;
     width: 100px;
@@ -332,7 +344,7 @@ body, .page_wrapper{
     margin-bottom: 30px;
 }
 
-.news_heading{
+.news_heading {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 44px;
@@ -350,18 +362,20 @@ body, .page_wrapper{
 //     column-gap: 30px;
 // }
 
-.unmatched, .advertising, .hypnotize{
+.unmatched,
+.advertising,
+.hypnotize {
     background-color: white;
     margin-right: 30px;
     width: 100%;
     max-width: 370px;
 }
 
-.card_info{
+.card_info {
     padding: 30px 20px
 }
 
-.card_heading{
+.card_heading {
     // width: 100%;
     // max-width: 330px;
     text-transform: uppercase;
@@ -370,7 +384,7 @@ body, .page_wrapper{
     font-size: 22px;
 }
 
-.card_description{
+.card_description {
     // width: 100%;
     // max-width: 330px;
     font-family: 'Open Sans';
@@ -380,17 +394,17 @@ body, .page_wrapper{
     margin-bottom: 39px;
 }
 
-.author_card{
+.author_card {
     display: flex;
 }
 
-.author_image{
+.author_image {
     border-radius: 50%;
     width: 60px;
     height: 60px;
 }
 
-.author_name{
+.author_name {
     font-family: "Montserrat";
     font-weight: 300;
     text-transform: uppercase;
@@ -400,7 +414,7 @@ body, .page_wrapper{
     margin-top: 0;
 }
 
-.author_date{
+.author_date {
     font-family: "Montserrat";
     font-weight: 300;
     font-size: 14px;
@@ -410,39 +424,50 @@ body, .page_wrapper{
     margin-bottom: 0;
 }
 
-.slick-prev::before , .slick-next::before{
+.slick-prev::before,
+.slick-next::before {
     width: 40px;
     height: 40px;
-    background-color: transparent;
+    //background-color: transparent;
     font-size: 40px;
-    font-family: 'Font Awesome 5 Free';
-    content:"\f104";
-    border-radius: 50%;
-    border: 1 px solid;
+    //font-family: 'Font Awesome 5 Free';
+    content: '';
 }
 
-.slick-prev{
-   width: 40px;
-   height: 40px;
-   left: -80px;
+.slick-prev {
+    width: 40px;
+    height: 40px;
+    left: -80px;
+    background-image: url(../assets/Left.svg);
 }
 
-.slick-next{
+.slick-next {
+    width: 40px;
+    height: 40px;
     right: -60px;
+    background-image: url(../assets/Right.svg);
 }
 
-.gallery_container{
+#slick-slide-control00::before,
+#slick-slide-control01::before,
+#slick-slide-control02::before,
+#slick-slide-control03::before,
+#slick-slide-control04::before {
+    margin-top: 30px;
+}
+
+.gallery_container {
     width: 100%;
 }
 
-.gallery_content{
+.gallery_content {
     width: 100%;
     margin: 0 auto;
     max-width: 1170px;
     padding: 140px 0;
 }
 
-.gallery_line{
+.gallery_line {
     width: 100%;
     max-width: 100px;
     display: block;
@@ -451,7 +476,7 @@ body, .page_wrapper{
     margin-bottom: 30px;
 }
 
-.gallery_title{
+.gallery_title {
     text-transform: uppercase;
     font-family: 'Montserrat';
     font-size: 44px;
@@ -461,7 +486,7 @@ body, .page_wrapper{
     margin-bottom: 89px;
 }
 
- #my-gallery{
+#my-gallery {
     display: grid;
     grid-template-columns: repeat(4, 285px);
     grid-template-rows: repeat(2, 214px);
@@ -469,40 +494,42 @@ body, .page_wrapper{
     margin-bottom: 60px;
 }
 
-.building{
+.building {
     width: 580px
 }
 
-.building2, .building3 .building4, .building5{
+.building2,
+.building3 .building4,
+.building5 {
     width: 285px;
 }
 
-.grid_item1{
+.grid_item1 {
     grid-column: 1/3;
     grid-row: 1/2;
 }
 
-.grid_item2{
+.grid_item2 {
     grid-column: 3/4;
     grid-row: 1/2;
 }
 
-.grid_item3{
+.grid_item3 {
     grid-column: 4/4;
     grid-row: 1/2;
 }
 
-.grid_item4{
+.grid_item4 {
     grid-column: 3/4;
     grid-row: 2/2;
 }
 
-.grid_item5{
+.grid_item5 {
     grid-column: 4/4;
     grid-row: 2/2;
 }
 
-.gallery_button{
+.gallery_button {
     display: block;
     margin: 0 auto;
     text-transform: uppercase;
@@ -513,15 +540,17 @@ body, .page_wrapper{
     cursor: pointer;
 }
 
-.map_section{
+.map_section {
     width: 100%;
     height: 100%;
     margin: 0 auto;
 }
 
-#map { height: 700px; }
+#map {
+    height: 700px;
+}
 
-.form_container{
+.form_container {
     width: 100%;
     max-width: 770px;
     //background-color: white;
@@ -538,7 +567,7 @@ body, .page_wrapper{
     position: relative;
 }
 
-.form_content{
+.form_content {
     padding: 60px 60px;
     margin: 0 auto;
     // background-image: url(../assets/formbck.jpg);
@@ -550,7 +579,7 @@ body, .page_wrapper{
     // position: relative;
 }
 
-.form_line{
+.form_line {
     border: 1px solid #2C4058;
     display: block;
     width: 100%;
@@ -559,7 +588,7 @@ body, .page_wrapper{
     margin: 0 auto;
 }
 
-.form_title{
+.form_title {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 44px;
@@ -569,14 +598,17 @@ body, .page_wrapper{
     margin-bottom: 42px;
 }
 
-.form_info{
+.form_info {
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 54px;
 }
 
-#form_location::before, .fa-phone::before, .fa-inbox::before, .fa-clock::before{
+#form_location::before,
+.fa-phone::before,
+.fa-inbox::before,
+.fa-clock::before {
     display: block;
     width: 5px;
     height: 5px;
@@ -585,16 +617,21 @@ body, .page_wrapper{
     text-align: left;
 }
 
-#form_location::before, .fa-phone::before, .fa-inbox::before, .fa-clock::before{
+#form_location::before,
+.fa-phone::before,
+.fa-inbox::before,
+.fa-clock::before {
     margin-right: 20px;
+    color: #7E5AFF;
 }
 
-.contacts{
+.contacts {
     line-height: 28px;
     font-size: 14px;
 }
 
-.form_name, .form_email{
+.form_name,
+.form_email {
     background-color: transparent;
     border: none;
     width: 100%;
@@ -602,46 +639,48 @@ body, .page_wrapper{
     margin-bottom: 33px;
 }
 
-.form_button{
+.form_button {
     text-transform: uppercase;
     padding: 11px 34px;
     margin-left: 258px;
 }
 
-.footer_section{
+.footer_section {
     width: 100%;
     background-image: url(../assets/footerbck.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 // .footer_image{
 //     width: 100%;
 //     //position: relative;
 // }
 
-.footer_container{
+.footer_container {
     padding: 230px 0;
     margin: 0 auto;
     //text-align: center;
     width: 100%;
 }
+
 // .footer_logo{
 //     width: 241px;
 //     height: 112px;
 //     //position: absolute;
 // }
 
-.footer_content{
+.footer_content {
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 369px;
 }
 
-.footer_nav{
+.footer_nav {
     margin-top: -50px;
 }
 
-.footer_content a{
+.footer_content a {
     cursor: pointer;
 }
