--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -14,15 +14,34 @@ body,
     margin: 0;
     padding: 0;
     width: 100%;
-    background: rgb(126, 90, 255);
-    background: linear-gradient(90deg, rgba(126, 90, 255, 1) 0%, rgba(85, 183, 255, 1) 100%);
-    // background-image: url(../assets/Background.png);
+    height: 100%;
+    // background: rgb(126, 90, 255);
+    // background: linear-gradient(90deg, rgba(126, 90, 255, 1) 0%, rgba(85, 183, 255, 1) 100%);
+    // background-image: url(../assets/header_bck.jpg);
     // background-repeat: no-repeat;
     // background-position: center;
     // background-size: cover;
-    // position: relative;
+    // background-color: rgb(126, 90, 255);
+    //background: linear-gradient(90deg, rgba(126, 90, 255, 1) 0%, rgba(85, 183, 255, 1) 100%);
+    position: relative;
     color: white;
     font-family: 'Source Sans 3';
+}
+
+
+
+.header_section::after{
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    //z-index: 1000;
+    top: 0;
+    left: 0;
+    background: rgb(126, 90, 255);
+    background: linear-gradient(270deg, rgba(126, 90, 255, 1) 0%, rgba(85, 183, 255, 1) 100%);
+    opacity: 0.90;
 }
 
 .header_container {
@@ -34,6 +53,8 @@ body,
     max-width: 1170px;
     padding: 53px 0;
     margin: 0 auto;
+    position: relative;
+    z-index: 10000;
 }
 
 .header_nav {
@@ -67,6 +88,7 @@ body,
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .bullet {
@@ -87,6 +109,7 @@ body,
     width: 100%;
     max-width: 160px;
     color: white;
+    cursor: pointer;
 }
 
 .social_nav i {
@@ -161,8 +184,12 @@ body,
     //opacity: 0.7;
     width: 100%;
     height: 100%;
-    max-width: 1600px;
-    max-height: 800px;
+    // max-width: 1600px;
+    // max-height: 800px;
+}
+
+.heading_bck{
+    z-index: 10000000000000;
 }
 
 .center_section,
@@ -316,7 +343,7 @@ body,
 }
 
 .news_section {
-    background-image: url(../assets/news_linear.png);
+    background-image: url(../assets/news_bck.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
