--- a/Project_2/styles/main.scss
+++ b/Project_2/styles/main.scss
@@ -54,7 +54,7 @@ body,
     padding: 53px 0;
     margin: 0 auto;
     position: relative;
-    z-index: 10000;
+    z-index: 2;
 }
 
 .header_nav {
@@ -120,6 +120,15 @@ body,
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.header_dots{
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    margin-right: 50px;
+    margin-top: 295px;
 }
 
 .header_title {
@@ -189,7 +198,7 @@ body,
 }
 
 .heading_bck{
-    z-index: 10000000000000;
+    z-index: 1;
 }
 
 .center_section,
