--- a/Project_2/styles/main.css
+++ b/Project_2/styles/main.css
@@ -31,6 +31,7 @@ body,
   background: #7e5aff;
   background: linear-gradient(270deg, #7e5aff 30%, #55b7ff 140%);
   opacity: 0.7;
+  z-index: 1;
 }
 
 .header_container {
@@ -175,6 +176,10 @@ body,
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.heading_bck {
+  position: realtive;
 }
 
 .center_section,
